finally made it work somehow

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <div id="form"></div>
     <div id="card"></div>
+    <div id="nothing"></div>
     <script src="main.js"></script>
 </body>
 
