--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
     <div class="container">
         <div class="jumbotron" id="tron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-                to
-                featured content or information.</p>
+            <h1 class="display-4">Hello Students!</h1>
+            <h2>Welcome to Hoggy Hoggy Warts!</h2>
+            <p class="lead">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal. Holly, Snape centauer portkey ghost Hermione spell bezoar Scabbers. Peruvian-Night-Powder werewolf, Dobby pear-tickled half-moon-glasses, Knight-Bus. Padfoot snargaluff seeker:Hagrid broomstick mischief managed.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="#" role="button" id="startSorting">Let's Get Sorting!</a>
             </p>
